--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dashbuild",
   "version": "0.0.1",
   "dependencies": {
+    "async": "0.2.9",
     "express": "3.2.4",
     "express-winston": "0.2.0",
     "mongodb": "1.3.5",
