--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "dependencies": {
     "async": "0.2.9",
-    "express": "3.2.4",
+    "express": "3.3.4",
     "express-winston": "0.2.0",
     "mongodb": "1.3.5",
     "mongoose": "3.6.11",
     "nconf": "0.6.7",
+    "socket.io": "0.9.16",
+    "timeplan": "1.0.0",
     "winston": "0.7.1"
   }
 }
