--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "mongodb": "1.3.5",
     "mongoose": "3.6.11",
     "nconf": "0.6.7",
+    "request": "2.22.0",
     "socket.io": "0.9.16",
-    "timeplan": "1.0.0",
     "winston": "0.7.1"
   }
 }
