Remove default sources and widgets

--- a/config.json
+++ b/config.json
@@ -5,14 +5,6 @@
   "log_path": "dashbuild.log",
   "log_level": "debug",
   "using_proxy": false,
-
-  "sources": {
-    "rng-1": { "source_plugin": "random", "config": {} },
-    "rng-2": { "source_plugin": "random", "config": {} }
-  },
-
-  "widgets": [
-    { "widget": "number", "title": "Valuation", "source": "rng-1", "row": 1, "col": 1, "sizex": 1, "sizey": 1, "moreinfo": "In billions", "config": { "prefix": "$" } },
-    { "widget": "number", "title": "Employees", "source": "rng-2", "row": 1, "col": 2, "sizex": 2, "sizey": 1 }
-  ]
+  "sources": {},
+  "widgets": []
 }
